No longer have global ghc installed via nix - so removed ugly workaround to use stack (but nix for 'dot')

--- a/README.org
+++ b/README.org
@@ -4,16 +4,10 @@ functional programming/Haskell techniques.
 Right now this repo just has experiments for the mechanics of putting it
 together, not the actual content itself (yet).
 
-* Usage (kludgy at this time)
+* Usage
 
 #+BEGIN_EXAMPLE
-# fresh shell
-. hcRmNixFromPath.sh
 make
-
-# new fresh shell
-make workaround
-
 # run org-export manually
 #+END_EXAMPLE
 
