Run org-export-as as a script.

--- a/README.org
+++ b/README.org
@@ -7,10 +7,8 @@ together, not the actual content itself (yet).
 * Usage
 
 #+BEGIN_EXAMPLE
+make clean
 make
-# run org-export manually
 #+END_EXAMPLE
 
-* TODO fix nix/stack collision
 * TODO auto create .generated directories
-* TODO run org export from makefile
