--- a/README.org
+++ b/README.org
@@ -11,4 +11,17 @@ make clean
 make
 #+END_EXAMPLE
 
+#+BEGIN_EXAMPLE
+                                +-----------+         +---------------+         +---------+
++---------------------+         | rdf       |<--------| rdr extracter |-------->|         |
+|                     |-------->| store     |         +---------------+         |         |
+| client:             |         +-----------+                                   | raw     |
+|  rdf-triple-browser |         +-----------+                                   | content |
+|                     |-------->| formatted |         +---------------+         |         |
++---------------------+         | content   |<--------| formatter     |-------->|         |
+                                +-----------+         +---------------+         +---------+
+#+END_EXAMPLE
+
+* TODO parameterize Makefile
 * TODO auto create .generated directories
+* TODO use Shake instead of Make
