--- a/content/recursion-schemes/README.org
+++ b/content/recursion-schemes/README.org
@@ -1,12 +1,12 @@
 refactoring recursion out of functions
 - explicit
-- fold
-- recursion schemes specialized to []
+- =fold=
+- recursion schemes specialized to =[]=
 
 refactoring recursion out of data
-- Foldable
-- Fix
-- recursion schemes for any Fix type
+- =Foldable=
+- =Fix=
+- recursion schemes for any =Fix= type
 
 #+begin_example
     recursion/data           corecursion/codata
