--- a/content/recursion-schemes/README.org
+++ b/content/recursion-schemes/README.org
@@ -14,5 +14,6 @@ refactoring recursion out of data
      cata                     ana
                hylo (cata . ana)
      para (cata++)            apo (ana++)
+     histo                    futu
      zygo (para gen)
 #+end_example
